[package]
name = "k210-pac"
version = "0.1.0"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for K210 SoC"
keywords = ["no-std", "riscv", "register", "peripheral"]
license = "ISC"
edition = "2018"

[dependencies]
