[package]
name = "k210-pac"
version = "0.1.1"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for K210 SoC"
keywords = ["riscv", "k210", "register", "peripheral"]
license = "ISC"
edition = "2018"

[dependencies]
bare-metal = "0.2.4"
riscv = "0.5.3"
riscv-rt = { version = "0.6.0", optional = true }
vcell = "0.1.0"

[features]
rt = ["riscv-rt"]
